--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@
         <div class="timeline4">
             <br><br><br><br><br><br><br><br><br>
             <h1>JUNE 2000</h1><br>
-            <p>They said there is Pizza on</p>
+            <p>Wanted to know more about planet</p>
             <p>Earth so I spawned</p>
             <img src="Rest in Pizza.png">
         </div>    
